[package]
name = "reclass-rs"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["VSHN AG <info@vshn.ch>"]
repository = "https://github.com/projectsyn/reclass-rs"
keywords = ["yaml", "reclass", "hierarchical config"]
description = "Reclass defines a syntax and directory structure for recursively merging YAML data sources."

[lib]
name = "reclass_rs"
# cdylib for pyo3 and rlib for `cargo test`
crate-type = ["cdylib", "rlib"]
# disable benchmarks for the lib crate
bench = false

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
indexmap = "2.2.6"
nom = "7.1.3"
pyo3 = { version = "=0.22.4", features = ["chrono"] }
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
yaml-merge-keys = { version = "0.7.0", features = ["serde_yaml"] }

[dev-dependencies]
criterion = "0.5.1"
paste = "1.0.14"

[features]
bench = []

[[bench]]
name = "inventory_single_threaded"
harness = false
required-features = ["bench"]

[[bench]]
name = "inventory_multi_threaded"
harness = false
required-features = ["bench"]
