[package]
name = "reclass-rs"
version = "0.0.0"
edition = "2024"
rust-version = "1.87"
license = "BSD-3-Clause"
authors = ["VSHN AG <info@vshn.ch>"]
repository = "https://github.com/projectsyn/reclass-rs"
keywords = ["yaml", "reclass", "hierarchical config"]
description = "Reclass defines a syntax and directory structure for recursively merging YAML data sources."

[lib]
name = "reclass_rs"
# cdylib for pyo3 and rlib for `cargo test`
crate-type = ["cdylib", "rlib"]
# disable benchmarks for the lib crate
bench = false

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
fancy-regex = "0.16.0"
glob = "0.3.2"
indexmap = "2.2.6"
nom = "8.0.0"
nom-language = "0.1.0"
pyo3 = { version = "=0.27.2", features = ["chrono"] }
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
yaml-merge-keys = { version = "0.8.1", features = ["serde_yaml"] }

[build-dependencies]
rustc_version = "0.4.1"

[dev-dependencies]
criterion = "0.8.0"
paste = "1.0.14"

[features]
bench = []

[[bench]]
name = "inventory_single_threaded"
harness = false
required-features = ["bench"]

[[bench]]
name = "inventory_multi_threaded"
harness = false
required-features = ["bench"]
