[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "reclass-rs"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [
    "authors",
    "description",
    "keywords",
    "license",
    "readme",
    "urls",
    "version",
]


[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
